--- a/game-dsl.cabal
+++ b/game-dsl.cabal
@@ -21,6 +21,8 @@ executable game-dsl
   -- other-extensions:    
   build-depends:       base >=4.6 && <4.7,
                        gloss,
-                       pipes
+                       pipes,
+                       free,
+                       containers
   -- hs-source-dirs:      
   default-language:    Haskell2010
