--- a/game-dsl.cabal
+++ b/game-dsl.cabal
@@ -20,9 +20,9 @@ executable game-dsl
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.6 && <4.7,
-                       gloss,
-                       free,
-                       containers,
-                       mtl
+                       gloss >=1.8.1.2 && <1.9,
+                       free >=4.9 && <4.10,
+                       containers >=0.5.0.0 && <0.6,
+                       mtl >=2.1.2 && <2.2
   -- hs-source-dirs:      
   default-language:    Haskell2010
