--- a/game-dsl.cabal
+++ b/game-dsl.cabal
@@ -15,6 +15,15 @@ build-type:          Simple
 extra-source-files:  README.md
 cabal-version:       >=1.10
 
+library
+  exposed-modules:     GameDSL
+  build-depends:       base >=4.6 && <4.7,
+                       gloss >=1.8.1.2 && <1.9,
+                       free >=4.9 && <4.10,
+                       containers >=0.5.0.0 && <0.6,
+                       mtl >=2.1.2 && <2.2
+  default-language:    Haskell2010
+
 executable game-dsl
   main-is:             Main.hs
   -- other-modules:       
