--- a/game-dsl.cabal
+++ b/game-dsl.cabal
@@ -23,8 +23,8 @@ library
                        mtl >=2.1.2 && <2.2
   default-language:    Haskell2010
 
-executable game-dsl
-  main-is:             Main.hs
+executable peg-solitaire
+  main-is:             peg-solitaire/Main.hs
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.6 && <4.7,
