--- a/game-dsl.cabal
+++ b/game-dsl.cabal
@@ -44,3 +44,14 @@ executable tic-tac-toe
                        mtl >=2.1.2 && <2.2
   -- hs-source-dirs:      
   default-language:    Haskell2010
+
+executable tower-defense
+  main-is:             tower-defense/Main.hs
+  -- other-modules:       
+  -- other-extensions:    
+  build-depends:       base >=4.6 && <4.7,
+                       gloss >=1.8.1.2 && <1.9,
+                       containers >=0.5.0.0 && <0.6,
+                       mtl >=2.1.2 && <2.2
+  -- hs-source-dirs:      
+  default-language:    Haskell2010
